<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 mh@lambdasoup.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:card_view="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       card_view:cardCornerRadius="4dp"
       card_view:contentPaddingBottom="@dimen/card_vertical_padding"
       card_view:contentPaddingLeft="@dimen/card_horizontal_padding"
       card_view:contentPaddingRight="@dimen/card_horizontal_padding"
       card_view:contentPaddingTop="@dimen/card_vertical_padding"
       tools:layout_height="wrap_content"
       tools:layout_margin="@dimen/activity_horizontal_margin"
       tools:layout_width="match_parent"
       tools:parentTag="android.support.v7.widget.CardView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/about_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_info"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_vertical_padding"/>

        <Button
            android:id="@+id/about_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_button"/>

    </LinearLayout>

</merge>